feat: Upgrade Java version from 17 to 21
Upgraded the Java version from 17 to 21 to take advantage of new features and improvements.

refactor: Refactor DTOs to use records

Refactored data transfer objects (DTOs) to use Java records for a more concise and immutable representation of data. DTOs passed to the template form to be modified were not refactored.

docs: Add missing Javadoc documentation to DTOs

Added Javadoc comments to DTO classes and methods that previously lacked documentation, improving code clarity and maintainability.